Clean code
svn path=/trunk/openspaces/; revision=58836


Former-commit-id: 225b09aa7c7b250b29569e42d76e60b2be487558