@@ -161,7 +161,7 @@ public class GigaMapFactoryBean implements InitializingBean, FactoryBean, BeanNa
      * @see org.springframework.transaction.TransactionDefinition#ISOLATION_DEFAULT
      */
     public void setDefaultIsolationLevel(int defaultIsolationLevel) {
-        if (!constants.getValues(PREFIX_ISOLATION).contains(new Integer(defaultIsolationLevel))) {
+        if (!constants.getValues(PREFIX_ISOLATION).contains( Integer.valueOf(defaultIsolationLevel))) {
             throw new IllegalArgumentException("Only values of isolation constants allowed");
         }
         this.defaultIsolationLevel = defaultIsolationLevel;
